# semiconductor-digital-twin

./: .gitignore  README.md
Modbus/: .gitignore  README.md  ROS2_INTERFACES_DRAFT.md  mock_server.py  modbus_map.py  pyproject.toml  register_client.py  requirements.txt
Modbus/ros2_nodes_draft/throughline_modbus_bridge/: README.md  package.xml  setup.cfg  setup.py
Modbus/ros2_nodes_draft/throughline_modbus_bridge/config/: modbus_bridge.yaml
Modbus/ros2_nodes_draft/throughline_modbus_bridge/launch/: modbus_bridge.launch.py
Modbus/ros2_nodes_draft/throughline_modbus_bridge/throughline_modbus_bridge/: __init__.py  modbus_bridge_node.py
Modbus/scripts/: modbus_env.sh  read_snapshot.sh  run_mock_server.sh  watch_snapshot.sh
RoboDK/scripts/: ImportCode.py  Wafer_move.py
WebSocket/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json
WebSocket/docs/: DASHBOARD_PLAN.md  MVP_ROADMAP.md  TECH_DESIGN_ROUTER_CHART_MOTION_PLAN.md  WEBSOCKET_API_CONTRACT.md
WebSocket/server/: deviceAdapters.ts  index.ts  smoke.ts  tcpClient.ts
WebSocket/shared/: devices.ts  mockTelemetry.ts  navigation.ts  telemetry.ts
WebSocket/src/: App.vue  env.d.ts  main.ts  router.ts  styles.css
backups/: .gitignore  README.md
datasets/: .gitignore
main_ws/: .gitignore
record_data/: .gitignore  MANIFEST.md  README.md
web/: .gitignore
web/dashboard/: DASHBOARD_PLAN.md  README.md  WEBSOCKET_API_CONTRACT.md  index.html
websocket/: .gitignore  README.md  WEBSOCKET_IMPLEMENTATION_PLAN.md  requirements.txt
yolo_v5/: .gitignore
(+141 files in other folders)
